--- a/helper/calendario/calendarIO.css
+++ b/helper/calendario/calendarIO.css
@@ -40,6 +40,7 @@ font-family: 'Montserrat', sans-serif;
 .body-cio table.days-cio{
     width:100%;
     color:#676767;
+    z-index:10;
 }
 .body-cio table.days-cio tr{}
 .body-cio table.days-cio td{
@@ -49,14 +50,17 @@ font-family: 'Montserrat', sans-serif;
     cursor:pointer;
 }
 .body-cio table.days-cio td.active{ color:#FFF; }
-.body-cio table.days-cio td.active:before{
-    content: '';
+.body-cio table.days-cio td.active span:first-child{
     position: absolute;
-    width: 80%;
+    width: 100%;
     height: 100%;
-    z-index: -1;
-    top: -1px;
-    left: 8px;
+    z-index: 1;
+    top: 0;
+    left: 0;
     border-radius: 50%;
     background: #79BD1A;
+}
+.body-cio table.days-cio td.active span:last-child{
+    position:relative;
+    z-index:2;
 }
