--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Heebo', sans-serif;
+}
 .header-hero{
     background-image: url(../img/hero.jpg);
     background-size: cover;
@@ -45,4 +48,49 @@
     font-size: 22px;
     font-weight: 600;
     padding: 30px 0 40px;
+}
+.check-content{ 
+    font-family: 'Heebo', sans-serif;
+}
+.check-content p{ 
+    font-size: 22px;
+    color: #696768;
+    margin-bottom: -8px;
+    text-transform:uppercase;
+}
+.check-content .check-io{
+    font-size: 22px; 
+    color:#D8DEE5;
+    font-weight: 300;
+    cursor:pointer;
+}
+.centered {
+    background-color: #ffffff;
+    position: fixed;
+    width: 40%;
+    text-align: center;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+.calendar-window {
+    border-radius: 7px;
+    padding: 35px;
+    box-shadow: 1px 6px 16px #4c4c4c;
+    z-index: 10;
+    display:none;
+}
+.calendar-window .close-wd{
+    position: absolute;
+    right: -10px;
+    top: -8px;
+    color: #ffba23;
+    padding: 10px 18px;
+    font-size: 21px;
+    font-weight: 700;
+    background: #fff;
+    z-index: 11;
+    border-radius: 50%;
+    box-shadow: 0px 2px 2px #acacac;
+    cursor:pointer;
 }
